--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,51 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Patrick+Hand&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <title>Ocoffee - Vente de café et accessoires</title>
-</head>
-
-<body>
-    <div class="container">
-
-        <header class="header">
-
-            <div class="header__logo">
-                <div class="header__logo__img__container">
-                    <img class="logo__srv" src="/img/logo.svg" alt="">
-                </div>
-                <h1 class="logo__title">oCoffee</h1>
-
-            </div>
-
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item menu__responsive">
-                        <a href="#">Menu</a>
-                    </li>
-                    <li class="nav__item show__menu">
-                        <a href="#" class="nav_link">Accueil</a>
-                    </li>
-                    <li class="nav__item show__menu">
-                        <a href="#" class="nav_link">Catalogue</a>
-                    </li>
-                    <li class="nav__item show__menu">
-                        <a href="#" class="nav_link">La boutique</a>
-                    </li>
-                </ul>
-            </nav>
-
-        </header>
+<%- include('partials/header') %>
 
         <main>
 
@@ -104,10 +57,5 @@
             </section>
 
         </main>
-    </div>
 
-    <footer class="footer">&copy; 2024 oCoffee</footer>
-
-</body>
-
-</html>
+<%- include('partials/footer') %>
