routage vers pages statiques + gestion 404

--- a/app/views/article.ejs
+++ b/app/views/article.ejs
@@ -3,6 +3,8 @@
         <main>
 
             <div class="article__image">
+                <img class="article__img" src="/img/coffees/compressed/100955894.webp" alt="">
+
             </div>
 
             <div>
@@ -17,7 +19,7 @@
                         <p><em class="strong">Disponible :</em> Oui</p>
                     </div>
                 </div>
-                <div class="show__catalog"><a class="show__catalog__btn" href="#">Catalogue</a></div>
+                <div class="show__catalog"><a class="show__catalog__btn" href="/articles">Catalogue</a></div>
             </div>
 
         </main>
