--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -13,7 +13,7 @@
                         </p>
                     </div>
                     <div class="presentation__about__btn">
-                        <a href="#" class="btn__link--catalog">Voir le catalogue</a>
+                        <a href="/articles" class="btn__link--catalog">Voir le catalogue</a>
                     </div>
                 </div>
 
@@ -31,7 +31,7 @@
                             <h3 class="article__title">Peruvian Arabica</h3>
                             <p>Café équilibré avec des notes de chocolat, une acidité modérée et un corps velouté.</p>
                         </div>
-                        <div class="article__btn"><a href="#">Découvrir</a></div>
+                        <div class="article__btn"><a href="/article">Découvrir</a></div>
                     </div>
                     <div class="article">
                         <div class="article__img__container">
@@ -41,7 +41,7 @@
                             <h3 class="article__title">Hawaiian Kona</h3>
                             <p>Café rare au goût riche, une acidité douce et des nuances subtiles.</p>
                         </div>
-                        <div class="article__btn"><a href="#">Découvrir</a></div>
+                        <div class="article__btn"><a href="/article">Découvrir</a></div>
                     </div>
                     <div class="article">
                         <div class="article__img__container">
@@ -51,7 +51,7 @@
                             <h3 class="article__title">Nicaraguan Maragogipe</h3>
                             <p>Café avec des notes de fruits, une acidité vive et un corps plein.</p>
                         </div>
-                        <div class="article__btn"><a href="#">Découvrir</a></div>
+                        <div class="article__btn"><a href="/article">Découvrir</a></div>
                     </div>
                 </div>
             </section>
