--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -34,10 +34,10 @@
                         <a href="#">Menu</a>
                     </li>
                     <li class="nav__item show__menu">
-                        <a href="#" class="nav_link">Accueil</a>
+                        <a href="/" class="nav_link">Accueil</a>
                     </li>
                     <li class="nav__item show__menu">
-                        <a href="#" class="nav_link">Catalogue</a>
+                        <a href="/articles" class="nav_link">Catalogue</a>
                     </li>
                     <li class="nav__item show__menu">
                         <a href="#" class="nav_link">La boutique</a>
