--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -11,7 +11,7 @@
                     <h3 class="article__title">Erreur 404</h3>
                     <p>Page non trouvée</p>
                 </div>
-                <div class="show__catalog"><a class="show__catalog__btn" href="#">Accueil</a></div>
+                <div class="show__catalog"><a class="show__catalog__btn" href="/">Accueil</a></div>
             </div>
 
         </main>
