--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,61 +1,57 @@
 <%- include('partials/header') %>
 
-        <main>
+    <main>
 
-            <section class="section presentation">
-                <div class="presentation__about">
-                    <div class="presentation__about__text">
-                        <h2 class="section__title">Qui sommes-nous ?</h2>
-                        <p class="presentation__about__text__paragraph">Jean et Jacques Pepper, deux frères passionnés
-                            par le café, sont les fondateurs de notre
-                            boutique. Avec une expertise approfondie et un amour profond pour cette délicieuse boisson,
-                            ils ont créé un espace où le café est célébré comme une expérience raffinée et inspirante.
-                        </p>
-                    </div>
-                    <div class="presentation__about__btn">
-                        <a href="/articles" class="btn__link--catalog">Voir le catalogue</a>
-                    </div>
+        <section class="section presentation">
+            <div class="presentation__about">
+                <div class="presentation__about__text">
+                    <h2 class="section__title">Qui sommes-nous ?</h2>
+                    <p class="presentation__about__text__paragraph">Jean et Jacques Pepper, deux frères passionnés
+                        par le café, sont les fondateurs de notre
+                        boutique. Avec une expertise approfondie et un amour profond pour cette délicieuse boisson,
+                        ils ont créé un espace où le café est célébré comme une expérience raffinée et inspirante.
+                    </p>
                 </div>
-
-                <img class="presentation__image" src="/img/about.webp" alt="">
-            </section>
-
-            <section class="section news">
-                <h2 class="section__title">Nouveautés</h2>
-                <div class="articles">
-                    <div class="article">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/909010558.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Peruvian Arabica</h3>
-                            <p>Café équilibré avec des notes de chocolat, une acidité modérée et un corps velouté.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
-                    <div class="article">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/954589100.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Hawaiian Kona</h3>
-                            <p>Café rare au goût riche, une acidité douce et des nuances subtiles.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
-                    <div class="article">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/958090105.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Nicaraguan Maragogipe</h3>
-                            <p>Café avec des notes de fruits, une acidité vive et un corps plein.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
+                <div class="presentation__about__btn">
+                    <a href="/articles" class="btn__link--catalog">Voir le catalogue</a>
                 </div>
-            </section>
+            </div>
 
-        </main>
+            <img class="presentation__image" src="/img/about.webp" alt="">
+        </section>
 
-<%- include('partials/footer') %>
+        <section class="section news">
+            <h2 class="section__title">Nouveautés</h2>
+
+            <div class="articles">
+
+            <% if (locals.coffees && locals.coffees.length >= 3 ) { %>
+
+                <% for( let index = coffees.length - 3; index < coffees.length; index++ ) { %>
+                    <div class="article">
+                        <div class="article__img__container">
+                            <img class="article__img" src="/img/coffees/compressed/<%= coffees[index].reference %>.webp" alt="">
+                        </div>
+                        <div class="article__description">
+                            <h3 class="article__title"><%= coffees[index].name %></h3>
+                            <p><%= coffees[index].description %></p>
+                        </div>
+                        <div class="article__btn"><a href="/article">Découvrir</a></div>
+                    </div>
+                <% } %>
+
+                
+
+
+
+                <% } else { %>
+                    <p>Aucune nouveauté pour le moment.</p>
+                    <% } %>
+                        
+            </div> 
+        </div>
+        </section>
+
+    </main>
+
+    <%- include('partials/footer') %>
