dynamisation page articles

--- a/app/views/articles.ejs
+++ b/app/views/articles.ejs
@@ -23,73 +23,41 @@
 
                 <div class="articles">
 
-                    <div class="article">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/100955890.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Espresso</h3>
-                            <p>Café fort et concentré préparé en faisant passer de l'eau chaude à travers du café
-                                finement moulu</p>
+                    <% if (locals.coffees?.length) {%>
 
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
+                        <% for( let index = 0; index < coffees.length; index++ ) { %>
+                            <% if (index < 3) { %>
+                            <div class="article">
+                                <div class="article__img__container">
+                                    <img class="article__img" src="/img/coffees/compressed/<%= coffees[index].reference%>.webp" alt="">
+                                </div>
+                                <div class="article__description">
+                                    <h3 class="article__title"><%= coffees[index].name %></h3>
+                                    <p><%= coffees[index].description %></p>
+        
+                                </div>
+                                <div class="article__btn"><a href="/article/<%= coffees[index].id %>">Découvrir</a></div>
+                            </div>
+                            <% } else { %>
+                                <div class="article show__more">
+                                    <div class="article__img__container">
+                                        <img class="article__img" src="/img/coffees/compressed/<%= coffees[index].reference%>.webp" alt="">
+                                    </div>
+                                    <div class="article__description">
+                                        <h3 class="article__title"><%= coffees[index].name %></h3>
+                                        <p><%= coffees[index].description %></p>
+            
+                                    </div>
+                                    <div class="article__btn"><a href="/article/<%= coffees[index].id %>">Découvrir</a></div>
+                                </div>
+                            <% } %>
+                        <% } %>
+                        
+                    <% } else { %>
+                        <p>Aucun café à afficher</p>
+                    <% } %>
 
-                    <div class="article">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/100955894.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Columbian</h3>
-                            <p>Café moyennement corsé avec une acidité vive et une saveur riche.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
 
-                    <div class="article">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/105589090.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Ethiopian Yirgacheffe</h3>
-                            <p>Réputé pour son arôme floral, son acidité vive et ses notes de saveur citronnée.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
-
-                    <div class="article show__more">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/134009550.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Brazilian Santos</h3>
-                            <p>Café doux et lisse avec un profil de saveur de noisette.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
-
-                    <div class="article show__more">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/134009550.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Brazilian Santos</h3>
-                            <p>Café doux et lisse avec un profil de saveur de noisette.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
-
-                    <div class="article show__more">
-                        <div class="article__img__container">
-                            <img class="article__img" src="/img/coffees/compressed/134009550.webp" alt="">
-                        </div>
-                        <div class="article__description">
-                            <h3 class="article__title">Brazilian Santos</h3>
-                            <p>Café doux et lisse avec un profil de saveur de noisette.</p>
-                        </div>
-                        <div class="article__btn"><a href="/article">Découvrir</a></div>
-                    </div>
 
                 </div>
 
