--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -30,16 +30,16 @@
 
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item menu__responsive">
+                    <li class="nav__item menu__responsive" id="menu__responsive">
                         <a href="#">Menu</a>
                     </li>
-                    <li class="nav__item show__menu">
+                    <li class="nav__item nav_item_responsive show__menu">
                         <a href="/" class="nav_link">Accueil</a>
                     </li>
-                    <li class="nav__item show__menu">
+                    <li class="nav__item nav_item_responsive show__menu">
                         <a href="/articles" class="nav_link">Catalogue</a>
                     </li>
-                    <li class="nav__item show__menu">
+                    <li class="nav__item nav_item_responsive show__menu">
                         <a href="#" class="nav_link">La boutique</a>
                     </li>
                 </ul>
