--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,8 +86,8 @@ body {
 
 .presentation__about__btn, .show__catalog__btn{
     color:var(--dark-brown);
-    background-color: var(--button-brown) ;
-    color:var(--button-text);
+    background-color: var(--dark-brown) ;
+    color:var(--light-brown);
     font-weight: 500;
     display:inline;
     padding:0.5em;
@@ -263,6 +263,18 @@ body {
         justify-content: center;
     }
 
+    .header__logo__img__container {
+        height: 5em;
+    }
+
+    .logo__title{
+        font-size: 2em;
+    }
+
+    .section__title{
+        font-size:1.5em;
+    }
+
     .section{
         margin-top: 3em;
     }
@@ -287,7 +299,7 @@ body {
     }
 
     .presentation__about{
-        margin-top: 1.5em;
+        margin-top: 4em;
     }
 
     .presentation__about__text{
