--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,6 +228,21 @@ body {
     font-weight:700;
 }
 
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+
+
+
 @media (max-width: 768px) {
     .header{
         display:block;
@@ -257,6 +272,7 @@ body {
 @media (max-width: 576px){
     .header{
         display:block;
+        position:static;
     }
 
     .header__logo{
