--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -42,6 +42,9 @@
                     <li class="nav__item nav_item_responsive show__menu">
                         <a href="#" class="nav_link">La boutique</a>
                     </li>
+                    <li class="nav__item nav_item_responsive show__menu">
+                        <a href="/cart" class="nav_link">Panier</a>
+                    </li>
                 </ul>
             </nav>
 
