--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -3,6 +3,7 @@
 <footer class="footer">&copy; 2024 oCoffee</footer>
 
 <script src="/js/index.js"></script>
+<script src="/js/article.js"></script>
 
 </body>
 
