debuggage et rangement des fonctions du panier

--- a/app/views/cart.ejs
+++ b/app/views/cart.ejs
@@ -55,7 +55,16 @@
 
             <tfoot class="recap__foot">
                 <tr class="recap__row">
-                    <th class="recap__cell-total-price" colspan="2"><span class="recap__total_products" id="recap__total_products">1 produit(s)</span></th>
+                    <th class="recap__cell-total-price" colspan="2"><span class="recap__total_products" id="recap__total_products">
+                        <% let totalOfProduct = 0; %>
+                        <% if(locals.cart) {%>
+                            
+                            <% for( const product in cart) {%>
+                                <%totalOfProduct += cart[product].quantity %>
+                            <% }; %>
+                            <% }; %>
+                            <%= totalOfProduct %> Produit(s)
+                    </span></th>
                     <td class="recap__cell-total-price" colspan="2"><span class="recap__total_price-text">Total de la commande :</span> <span id="recap__total_price-number">
                         <% let total = 0 %>
                         <% if(locals.cart){ %>
