--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -2,6 +2,8 @@
 
 <footer class="footer">&copy; 2024 oCoffee</footer>
 
+<script src="/js/cart.js"></script>
+<script src="/js/goBack.js"></script>
 <script src="/js/index.js"></script>
 
 </body>
