--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -4,6 +4,7 @@
 
 <script src="/js/cart.js"></script>
 <script src="/js/goBack.js"></script>
+<script src="/js/catalog.js"></script>
 <script src="/js/index.js"></script>
 
 </body>
