ajout lien vers une page boutique

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -40,7 +40,7 @@
                         <a href="/articles" class="nav_link">Catalogue</a>
                     </li>
                     <li class="nav__item nav_item_responsive show__menu">
-                        <a href="#" class="nav_link">La boutique</a>
+                        <a href="/boutique" class="nav_link">La boutique</a>
                     </li>
                     <li class="nav__item nav_item_responsive show__menu">
                         <a href="/cart" class="nav_link">Panier</a>
